# delta_context2

./: .env.example  .gitignore  README.md  deliverable.md  notes.md  pyproject.toml  task_plan.md
src/delta_context2/: __init__.py  main.py
src/delta_context2/audio/: align.py  helpers.py  mega_asr.py  mega_asr_audio_quality.py  separator.py  transcribe.py
src/delta_context2/infomation/: llm.py  prompt.py  read_metadata.py  translate_agent.py  video_metadata.py
src/delta_context2/text/: utils.py
src/delta_context2/utils/: align.py  check.py  decorator.py  dir.py  list.py  network.py  progress.py  subtitle.py
src/delta_context2/video/: downloader.py  utils.py
tests/: test_align_subtitle_segmentation.py  test_llm_openai.py  test_transcribe_mega_asr.py  test_transcribe_qwen.py
