[project]
name = "delta_context2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "GrahLnn", email = "grahlnn@skiff.com" }]
dependencies = [
    "yt-dlp>=2024.12.6",
    "alive-progress>=3.1.5,<4.0.0",
    "retry>=0.9.2",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.1",
    "openai-whisper>=20231117",
    "museper @ git+https://github.com/GrahLnn/museper.git",
    "demjson3>=3.0.6",
    "ctc-forced-aligner @ git+https://github.com/MahmoudAshraf97/ctc-forced-aligner.git",
    "nemo-toolkit[asr]==2.0.0rc0",
    "huggingface-hub==0.23.2",
    "numpy<2",
    "onnx==1.16.1",
    "onnxruntime==1.19.2",
    "toml>=0.10.2",
    "tenacity>=9.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
